--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "smalltalk"
 version = "0.1.0"
 edition = "2021"
+authors = ["Rowan S-L <rowan@fawkes.io>"]
+license = "GPL-3.0-only OR MIT"
+readme = "README.md"
+repository = "https://github.com/rowan-sl/smalltalk/"
+description = "Utilities for simple networking with tokio"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
