--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,9 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["sync", "rt-multi-thread", "io-util", "signal", "rt", "net", "time"] }
-serde = { version = "1", features = ["derive"] }
+tokio = { version = "1", features = ["io-util", "net"] }
+serde = { version = "1" }
 bincode = "1.3.3"
 bytes = "1"
-parking_lot = "0.11.2"
-queues = "1.1.0"
-uuid = { version = "0.8.2", features = ["v4"] }
 async-trait = "0.1"
 thiserror = "1"
