add keywords and catagories to cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ license = "GPL-3.0-only OR MIT"
 readme = "README.md"
 repository = "https://github.com/rowan-sl/smalltalk/"
 description = "Utilities for simple networking with tokio"
-publish = false
+keywords = ["networking", "async", "tokio"]
+catagories = ["network-programming", "asynchronous"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
