--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Rowan S-L <rowan@fawkes.io>"]
 license = "GPL-3.0-only OR MIT"
 readme = "README.md"
 repository = "https://github.com/rowan-sl/smalltalk/"
-description = "Utilities for simple networking with tokio"
+description = "Utilities for speeding up development of simple networked applications"
 keywords = ["networking", "async", "tokio"]
 categories = ["network-programming", "asynchronous"]
 
